--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.7.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
